--- a/src/app/doctor/doctor.component.html
+++ b/src/app/doctor/doctor.component.html
@@ -13,36 +13,36 @@
 					</md-toolbar>
 					<div class="col-lg-12 col-md-12 col-sm-12 mtb10">
 						<div class="col-md-1 col-sm-2 col-lg-1 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="salutation" #salutation [(ngModel)]="NewDoctor.Salutation" placeholder="Salutation" autocomplete="off"
-							 type="text" required maxLength="3" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="salutation" #salutation [(ngModel)]="NewDoctor.Salutation" placeholder="Salutation"
+								 autocomplete="off" type="text" required maxLength="3" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="firstName" #firstName [(ngModel)]="NewDoctor.FirstName" placeholder="First Name" type="text" autocomplete="off"
-							 required maxLength="35" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="firstName" #firstName [(ngModel)]="NewDoctor.FirstName" placeholder="First Name" type="text"
+								 autocomplete="off" required maxLength="35" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-4 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="middleName" #middleName [(ngModel)]="NewDoctor.MiddleName" placeholder="Middle Name" type="text"
-							 autocomplete="off" maxLength="20" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="middleName" #middleName [(ngModel)]="NewDoctor.MiddleName" placeholder="Middle Name"
+								 type="text" autocomplete="off" maxLength="20" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-4 col-sm-6 col-lg-4 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="lastName" #lastName [(ngModel)]="NewDoctor.LastName" placeholder="Last Name" type="text" autocomplete="off"
-							 required maxLength="35" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="lastName" #lastName [(ngModel)]="NewDoctor.LastName" placeholder="Last Name" type="text"
+								 autocomplete="off" required maxLength="35" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="primaryPhone" #primaryPhone [(ngModel)]="NewDoctor.PrimaryPhone" placeholder="Primary Phone" autocomplete="off"
-							 type="text" required maxLength="15" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="primaryPhone" #primaryPhone [(ngModel)]="NewDoctor.PrimaryPhone" placeholder="Primary Phone"
+								 autocomplete="off" type="text" required maxLength="15" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="secondaryPhone" #secondaryPhone [(ngModel)]="NewDoctor.SecondaryPhone" placeholder="Secondary Phone"
-							 autocomplete="off" type="text" maxLength="15" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="secondaryPhone" #secondaryPhone [(ngModel)]="NewDoctor.SecondaryPhone" placeholder="Secondary Phone"
+								 autocomplete="off" type="text" maxLength="15" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-6 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="email" #email [(ngModel)]="NewDoctor.Email" autocomplete="off" placeholder="Email" type="email"
-							 required maxLength="255" [disabled]="!isNewDoctor"></md-input-container>
+							<md-input-container> <input mdInput class="" name="email" #email [(ngModel)]="NewDoctor.Email" autocomplete="off" placeholder="Email" type="email"
+								 required maxLength="255" [disabled]="!isNewDoctor"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="client" #client [(ngModel)]="NewDoctor.Client" autocomplete="off" [typeahead]="clients" autocomplete="off"
-							 placeholder="Client" type="text" required [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="client" #client [(ngModel)]="NewDoctor.Client" autocomplete="off" [typeahead]="clients"
+								 autocomplete="off" placeholder="Client" type="text" required [disabled]="inputDisabled"></md-input-container>
 						</div>
 
 
@@ -55,28 +55,29 @@
 					<md-toolbar color="primary">Address Details</md-toolbar>
 					<div class="col-lg-12 col-md-12 col-sm-12 mtb10">
 						<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="addressLine1" #addressLine1 [(ngModel)]="NewDoctor.AddressLine1" placeholder="Address Line 1" autocomplete="off"
-							 type="text" required maxLength="255" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="addressLine1" #addressLine1 [(ngModel)]="NewDoctor.AddressLine1" placeholder="Address Line 1"
+								 autocomplete="off" type="text" required maxLength="255" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="addressLine2" #addressLine2 [(ngModel)]="NewDoctor.AddressLine2" placeholder="Address Line 2" autocomplete="off"
-							 type="text" maxLength="255" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="addressLine2" #addressLine2 [(ngModel)]="NewDoctor.AddressLine2" placeholder="Address Line 2"
+								 autocomplete="off" type="text" maxLength="255" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="country" #country [(ngModel)]="NewDoctor.Country" [typeahead]="countries" autocomplete="off" autocomplete="off"
-							 placeholder="Country" type="text" required [disabled]="inputDisabled" (change)="countrySelected()" (typeaheadOnSelect)="countrySelected()"></md-input-container>
+							<md-input-container> <input mdInput class="" name="country" #country [(ngModel)]="NewDoctor.Country" [typeahead]="countries" autocomplete="off"
+								 autocomplete="off" placeholder="Country" type="text" required [disabled]="inputDisabled" (change)="countrySelected()"
+								 (typeaheadOnSelect)="countrySelected()"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="state" #state [(ngModel)]="NewDoctor.State" autocomplete="off" [typeahead]="states" placeholder="State"
-							 type="text" required [disabled]="inputDisabled" (change)="stateSelected()" (typeaheadOnSelect)="stateSelected()"></md-input-container>
+							<md-input-container> <input mdInput class="" name="state" #state [(ngModel)]="NewDoctor.State" autocomplete="off" [typeahead]="states"
+								 placeholder="State" type="text" required [disabled]="inputDisabled" (change)="stateSelected()" (typeaheadOnSelect)="stateSelected()"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="city" #city [(ngModel)]="NewDoctor.City" [typeahead]="cities" autocomplete="off" placeholder="City"
-							 type="text" required [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="city" #city [(ngModel)]="NewDoctor.City" [typeahead]="cities" autocomplete="off" placeholder="City"
+								 type="text" required [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="ZIP" #zip [(ngModel)]="NewDoctor.ZIP" placeholder="ZIP" autocomplete="off" type="text" required
-							 maxLength="10" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="ZIP" #zip [(ngModel)]="NewDoctor.ZIP" placeholder="ZIP" autocomplete="off" type="text"
+								 required maxLength="10" [disabled]="inputDisabled"></md-input-container>
 						</div>
 					</div>
 				</div>
@@ -84,37 +85,37 @@
 					<md-toolbar color="primary">Specialty Details</md-toolbar>
 					<div class="col-lg-12 col-md-12 col-sm-12 mtb10">
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="dictationMode" #dictationMode [(ngModel)]="NewDoctor.DictationMode" autocomplete="off" [typeahead]="dictationModes"
-							 [typeaheadMinLength]="0" placeholder="Dictation Mode" type="text" required [disabled]="inputDisabled"></md-input-container>
-						</div>
-						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12" *ngIf="NewDoctor.DictationMode=='Toll Free' || NewDoctor.DictationMode=='Dictaphone & Toll Free'">
-							<md-input-container>   <input mdInput class="" name="idigitalId" #idigitalId [(ngModel)]="NewDoctor.IdigitalId" autocomplete="off" placeholder="IdigitalId"
-							 type="text" required [disabled]="inputDisabled"></md-input-container>
-						</div>
-						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12" *ngIf="NewDoctor.DictationMode=='Toll Free' || NewDoctor.DictationMode=='Dictaphone & Toll Free'">
-							<md-input-container>   <input mdInput class="" name="idigitalAuthorId" #idigitalAuthorId [(ngModel)]="NewDoctor.IdigitalAuthorId" autocomplete="off" placeholder="Idigital AuthorId"
-							 type="text" required [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="dictationMode" #dictationMode [(ngModel)]="NewDoctor.DictationMode" autocomplete="off"
+								 [typeahead]="dictationModes" [typeaheadMinLength]="0" placeholder="Dictation Mode" type="text" required [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="jobLevel" #jobLevel [(ngModel)]="NewDoctor.JobLevel" autocomplete="off" [typeahead]="jobLevels"
-							 [typeaheadMinLength]="0" placeholder="Job Level" type="text" required [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="idigitalId" #idigitalId [(ngModel)]="NewDoctor.IdigitalId" autocomplete="off" placeholder="IdigitalId"
+								 type="text" required [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="voiceGrade" #voiceGrade [(ngModel)]="NewDoctor.VoiceGrade" autocomplete="off" [typeahead]="voiceGrades"
-							 [typeaheadMinLength]="0" placeholder="Voice Grade" type="text" required [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="idigitalAuthorId" #idigitalAuthorId [(ngModel)]="NewDoctor.IdigitalAuthorId" autocomplete="off"
+								 placeholder="Idigital AuthorId" type="text" required [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="macroPercent" #macroPercent [(ngModel)]="NewDoctor.MacroPercent" autocomplete="off" placeholder="Macro Percent"
-							 type="number" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="jobLevel" #jobLevel [(ngModel)]="NewDoctor.JobLevel" autocomplete="off" [typeahead]="jobLevels"
+								 [typeaheadMinLength]="0" placeholder="Job Level" type="text" required [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
-							<md-input-container>   <input mdInput class="" name="doctorGroup" #doctorGroup [(ngModel)]="NewDoctor.DoctorGroup" autocomplete="off" placeholder="Doctor Group"
-							 [typeahead]="doctorGroups" type="text" [disabled]="inputDisabled" autocomplete="off"></md-input-container>
+							<md-input-container> <input mdInput class="" name="voiceGrade" #voiceGrade [(ngModel)]="NewDoctor.VoiceGrade" autocomplete="off" [typeahead]="voiceGrades"
+								 [typeaheadMinLength]="0" placeholder="Voice Grade" type="text" required [disabled]="inputDisabled"></md-input-container>
+						</div>
+						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
+							<md-input-container> <input mdInput class="" name="macroPercent" #macroPercent [(ngModel)]="NewDoctor.MacroPercent" autocomplete="off"
+								 placeholder="Macro Percent" type="number" [disabled]="inputDisabled"></md-input-container>
+						</div>
+						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
+							<md-input-container> <input mdInput class="" name="doctorGroup" #doctorGroup [(ngModel)]="NewDoctor.DoctorGroup" autocomplete="off" placeholder="Doctor Group"
+								 [typeahead]="doctorGroups" type="text" [disabled]="inputDisabled" autocomplete="off"></md-input-container>
 						</div>
 						<div class="col-md-3 col-sm-3 col-lg-3 col-xs-12">
 							<!--Multi Select-->
-							<md-input-container>   <input mdInput class="" name="specialty" #specialty [(ngModel)]="specialtySelector" autocomplete="off" (typeaheadOnSelect)="specialtiesChange()"
-							 [typeahead]="specialties" placeholder="Specialty" type="text" (blur)="specialtiesChange()" [disabled]="inputDisabled"></md-input-container>
+							<md-input-container> <input mdInput class="" name="specialty" #specialty [(ngModel)]="specialtySelector" autocomplete="off" (typeaheadOnSelect)="specialtiesChange()"
+								 [typeahead]="specialties" placeholder="Specialty" type="text" (blur)="specialtiesChange()" [disabled]="inputDisabled"></md-input-container>
 						</div>
 						<div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 alert alert-info" *ngIf="NewDoctor.Specialties.length>0">
 							<span class="mright5">Specialties Selected </span>
